--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         with:
-          ref: $GITHUB_REF
+          ref: ${{ github.ref }}
 #      - uses: ./.github/actions/prepare-bundles
       - name: Run a one-line script
         run: echo Hello, world!
