--- a/.github/actions/build-bundles/action.yml
+++ b/.github/actions/build-bundles/action.yml
@@ -1,4 +1,4 @@
-name: "Prepare bundles"
+name: "Build bundles"
 description: "Validate bundles and generate output files based on them."
 
 runs:
@@ -7,7 +7,7 @@ runs:
 
 inputs:
   output_directory:
-    description: "Directory with the generated files"
+    description: "Output directory with the generated files"
     required: true
     default: "./generated"
 
