--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Prepare bundles
-        uses: ./.github/actions/prepare-bundles
+        uses: ./.github/actions/build-bundles
         with:
           output_directory: "./generated"
 
@@ -21,10 +21,8 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v2.1.0
         with:
-          author_name: Prepare bundles GitHub action
-          author_email: actions@noreply.github.com
           message: "Prepare bundles"
-          path: "generated"
+          path: "./generated"
           #pattern: "*.*"
           #force: false
         env:
