Add a simple github action.

--- a/.github/actions/build-bundles/action.yml
+++ b/.github/actions/build-bundles/action.yml
@@ -6,7 +6,7 @@ runs:
   image: "Dockerfile"
 
 inputs:
-  output_directory:
+  output_path:
     description: "Output directory with the generated files"
     required: true
     default: "./generated"
