--- a/bundlegen/pom.xml
+++ b/bundlegen/pom.xml
@@ -7,6 +7,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <!-- Neither Java 11 nor 13 is present on GitHub hosted runners. -->
+        <!-- https://help.github.com/en/actions/automating-your-workflow-with-github-actions/software-installed-on-github-hosted-runners -->
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
