--- a/bundlegen/pom.xml
+++ b/bundlegen/pom.xml
@@ -2,7 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.citrix.microapps</groupId>
+    <parent>
+        <groupId>com.citrix.microapps</groupId>
+        <artifactId>parent-project</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>bundlegen</artifactId>
     <version>1.0-SNAPSHOT</version>
 
