--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -2,9 +2,9 @@ name: Prepare bundles
 on:
   push:
 env:
-  DEST_REPO: workspace-microapps-bundles
-  DEST_REPO_FULL: michaltc/workspace-microapps-bundles
+  DEST_REPO: michaltc/workspace-microapps-bundles
   DEST_REPO_BRANCH: refs/heads/master
+  DEST_REPO_DIR: ../workspace-microapps-bundles
 jobs:
   build:
     runs-on: ubuntu-18.04
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout destination repository
         uses: actions/checkout@v1
         with:
-          repository: ${{ env.DEST_REPO_FULL }}
+          repository: ${{ env.DEST_REPO }}
           ref: ${{ env.DEST_REPO_BRANCH }}
 
       - name: Maven modules cache
@@ -33,7 +33,7 @@ jobs:
         run: |
           set -x
           branch=$(echo $GITHUB_REF | sed 's%^refs/heads/%%' | sed 's%[^-a-zA-Z0-9]%_%g')
-          args="bundles ../$DEST_REPO/$branch"
+          args="bundles $DEST_REPO_DIR/$branch"
           mvn --batch-mode exec:java -pl bundlegen -Dexec.mainClass="com.citrix.microapps.bundlegen.BundlegenMain" -Dexec.args="$args"
 
 #      # https://github.com/EndBug/add-and-commit
