Commit generated files from command line.

--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v1
         with:
           repository: ${{ env.DEST_REPO }}
-          # ref: ${{ env.GITHUB_REF }}
+          ref: ${{ env.GITHUB_REF }}
 
       - name: Checkout destination branch
         run: |
