--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v1
         with:
           repository: ${{ env.DEST_REPO }}
-          ref: ${{ env.GITHUB_REF }}
+          ref: master
 
       - name: Checkout destination branch
         run: |
