--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -59,15 +59,7 @@ jobs:
           then
             git config user.name "Bundlegen bot"
             git config user.email "bundlegen.bot@github.com"
-
-            message=$(cat <<EOF
-            Generated bundles
-
-            - $GITHUB_REPOSITORY
-            - $GITHUB_REF
-            - $GITHUB_SHA
-        EOF)
-
+            message=$(printf "Generated bundles\n\n- $GITHUB_REPOSITORY\n- $GITHUB_REF\n- $GITHUB_SHA")
             git commit --all --message "$message"
             git push --set-upstream origin "${GITHUB_REF:11}"
           else
