Commit generated files from command line.

--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -63,12 +63,14 @@ jobs:
             message=$(printf "Generated bundles\n\n- $GITHUB_REPOSITORY\n- $GITHUB_REF\n- $GITHUB_SHA")
             git commit --all --message "$message"
 
-            git remote -v
-
             set +x
+            url=$(git remote get-url --push origin)
+            new_url=$(echo "$url" | sed "s%github.com%$GITHUB_ACTOR:$GITHUB_TOKEN@github.com%")
+            git remote set-url --push origin "$new_url"
             # git config credential.username $GITHUB_ACTOR
-            # git -c http.extraheader="AUTHORIZATION: basic $GITHUB_TOKEN" push --set-upstream origin "${GITHUB_REF:11}"
             set -x
+
+            git push --set-upstream origin "${GITHUB_REF:11}"
           else
             echo "Working tree clean. Nothing to commit."
           fi
