--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -64,9 +64,10 @@ jobs:
             git commit --all --message "$message"
 
             set +x
+            mkdir -p "$HOME/.ssh/"
             echo "$DEST_REPO_SSH_KEY" > "$HOME/.ssh/id_rsa"
-            set -x
             chmod 600 "$HOME/.ssh/id_rsa"
+            set -x
 
             git push "git@github.com:$DEST_REPO.git" --set-upstream origin "${GITHUB_REF:11}"
             rm "$HOME/.ssh/id_rsa"
