--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -66,7 +66,7 @@ jobs:
             chmod 600 "$HOME/.ssh/id_rsa"
             set -x
 
-            ssh-keyscan -H -t rsa github.com >> ~/.ssh/known_hosts
+            #ssh-keyscan -H -t rsa github.com >> ~/.ssh/known_hosts
             git push --set-upstream origin "${GITHUB_REF:11}"
             rm "$HOME/.ssh/id_rsa"
           else
