Delete branch from destination repository

--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -1,6 +1,6 @@
 name: Prepare bundles
 on:
-  push:
+  push
 env:
   DEST_REPO: michaltc/workspace-microapps-bundles
   DEST_REPO_DIR: ../workspace-microapps-bundles
