--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -46,6 +46,10 @@ jobs:
 
           mvn --batch-mode exec:java -pl bundlegen -Dexec.mainClass="${main_class}" -Dexec.args="${args}"
 
+      - name: Update readme
+        run: |
+          cp README.md "${DEST_REPO_DIR}"
+
       - name: Commit and push generated files
         run: |
           set -x
