--- a/bundlegen/pom.xml
+++ b/bundlegen/pom.xml
@@ -4,7 +4,7 @@
 
     <parent>
         <groupId>com.citrix.microapps</groupId>
-        <artifactId>parent-project</artifactId>
+        <artifactId>workspace-microapps</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
