--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -1,6 +1,5 @@
 name: Prepare bundles
-on:
-  push
+on: [push, pull_request]
 env:
   DEST_REPO: michaltc/workspace-microapps-bundles
   DEST_REPO_DIR: ../workspace-microapps-bundles
