Revert "Trigger the action also on pull request."
This reverts commit 6a35e63096539e168ab23782518e3f5e81e2b2d0.

--- a/.github/workflows/prepare-bundles.yml
+++ b/.github/workflows/prepare-bundles.yml
@@ -1,5 +1,6 @@
 name: Prepare bundles
-on: [push, pull_request]
+on:
+  push
 env:
   DEST_REPO: michaltc/workspace-microapps-bundles
   DEST_REPO_DIR: ../workspace-microapps-bundles
